workspace(name = "overridden_artifacts")

local_repository(
    name = "dummy-scala_rules",
    path = "fake/path",
)

load("@dummy-scala_rules//scala:latest_deps.bzl", "rules_scala_dependencies")

rules_scala_dependencies()

load("@platforms//host:extension.bzl", "host_platform_repo")

host_platform_repo(name = "host_platform")

register_toolchains("@rules_scala_protoc_toolchains//...:all")

load("@bazel_features//:deps.bzl", "bazel_features_deps")

bazel_features_deps()

load("@rules_java//java:rules_java_deps.bzl", "rules_java_dependencies")

rules_java_dependencies()

load("@bazel_skylib//:workspace.bzl", "bazel_skylib_workspace")

bazel_skylib_workspace()

load("@rules_python//python:repositories.bzl", "py_repositories")

py_repositories()

load("@com_google_protobuf//:protobuf_deps.bzl", "protobuf_deps")

protobuf_deps()

load("@rules_java//java:repositories.bzl", "rules_java_toolchains")

rules_java_toolchains()

load("@rules_proto//proto:repositories.bzl", "rules_proto_dependencies")

rules_proto_dependencies()

load("@rules_proto//proto:setup.bzl", "rules_proto_setup")

rules_proto_setup()

load("@rules_proto//proto:toolchains.bzl", "rules_proto_toolchains")

rules_proto_toolchains()

load("@dummy-scala_rules//protoc:toolchains.bzl", "scala_protoc_toolchains")

scala_protoc_toolchains(name = "rules_scala_protoc_toolchains")

load("@dummy-scala_rules//:scala_config.bzl", "scala_config")

scala_config(scala_version = "3.3.7")

load(
    "@dummy-scala_rules//scala:toolchains.bzl",
    "scala_register_toolchains",
    "scala_toolchains",
)

scala_toolchains(
    # Deliberately set for Scala 3.3 and 2.13 versions less than the most
    # recently supported. See the `scala_version` setting at the top of
    # `third_party/repositories/scala_{2_13,3_3}.bzl`.
    overridden_artifacts = {
        "io_bazel_rules_scala_scala_library": {
            "artifact": "org.scala-lang:scala3-library_3:3.3.4",
            "sha256": "d95184acfcd814da2e051378e4962c653f4b468f4086452ab427af030482bd3c",
        },
        "io_bazel_rules_scala_scala_compiler": {
            "artifact": "org.scala-lang:scala3-compiler_3:3.3.4",
            "sha256": "2cca65fdb92e2cc393786cae61b4f7bcb9032ad4be61f9cebae1dca72997e52f",
            # These are _not_ strictly required in this case, but we want to
            # test that nothing breaks when they're specified.
            "deps": [
                "@io_bazel_rules_scala_scala_asm",
                "@io_bazel_rules_scala_scala_interfaces",
                "@io_bazel_rules_scala_scala_library",
                "@io_bazel_rules_scala_scala_tasty_core",
                "@org_jline_jline_reader",
                "@org_jline_jline_terminal",
                "@org_jline_jline_terminal_jni",
                "@org_scala_sbt_compiler_interface",
            ],
        },
        "io_bazel_rules_scala_scala_library_2": {
            "artifact": "org.scala-lang:scala-library:2.13.14",
            "sha256": "43e0ca1583df1966eaf02f0fbddcfb3784b995dd06bfc907209347758ce4b7e3",
        },
    },
    scalatest = True,
)

scala_register_toolchains()
